feat: 更新2025-05-20的笔记，新增.prettierignore文件

--- a/src/content/vault/RandomThoughts/2025-05.md
+++ b/src/content/vault/RandomThoughts/2025-05.md
@@ -1,10 +1,14 @@
+## 读后感&观后感
+
+- [[小Lin说]]的 [这个视频](https://www.bilibili.com/video/BV16HEWzcEUK/?spm_id_from=333.1387.homepage.video_card.click&vd_source=5b4c141029b3d309804a79b56a218572) 提供了一个理解特朗普关税政策的视角。
+- [[Paul Graham]] 的 [You Weren't Meant To Have A Boss](https://2019.gnimoay.com/25682b3454354abd805fcb448336ba1e)
+  - 什么是为一家大公司工作时最不自然的呢？问题根源是，人类就不适合在一个大集体中工作。
+  - “根据我阅读的有关狩猎采集社会的内容、关于组织的研究以及我的个人经验，理想的团队大小应该是这样：8人团队可以工作得很好；当达到20人时，团队就变得难以管理；而一个50人的团队就已经十分笨重。”
+  - “如果你不被允许去实现新想法，你就会逐渐失去新想法。反过来也是，当你可以做任何自己想做的事情时，你就会产生更多与之相关的想法。”
+
+## 杂记
+
 - 理性思考的其中一个体现是：尽管你事实上是有立场的，但你在思考时，尝试暂时忽略自己的立场或主动站在别的立场上进行思考。
   - 你事实上是一个男人，但你尝试忽略自己的性别或站在女性角度去思考男女对立；
   - 你事实上是一个中国人，但你尝试忽略自己的国家立场来思考国际政治。
-
-- 小 Lin 说的[这个视频](https://www.bilibili.com/video/BV16HEWzcEUK/?spm_id_from=333.1387.homepage.video_card.click&vd_source=5b4c141029b3d309804a79b56a218572)提供了一个理解特朗普关税政策的视角。
-
 - 罗大佑是一个亲身经历了台湾民主化、城市化，音乐数字化的台湾人，从他身上能感受到时代的变迁。
-
-
-
